@@ -5,6 +5,7 @@ Comprehensive changes can be found in Git change history:
 ## [0.11...]
 ### 2018-11-09
 	Added: Audio Volume Strategy 4 and 5. 4 is Decrease from Full, 5 is Increase from Mute. Volume is untouched otherwise.
+	Changed: Internet failure should be less spammy.
 	Internal: String handling changed.
 ### 2018-11-07
 	Fixed: Exception handling in startup.
